day 5 done, wtf was that

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,10 @@ add_executable(${PROJECT_NAME}
   # day_two/part_two.cpp
   # day_three/part_one.cpp
   # day_three/part_two.cpp
-  day_four/part_one_two.cpp
+  # day_four/part_one_two.cpp
+  # day_five/part_one.cpp
+  day_five/part_two.cpp
+  # day_five/main.cpp
   # main.cpp
 )
 
