--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,10 +17,13 @@ add_executable(${PROJECT_NAME}
   # day_four/part_one_two.cpp
   # day_five/part_one.cpp
   # day_five/part_two.cpp
-  # day_five/main.cpp
+  # day_five/main.cpp*-
   # day_six/part_one.cpp
   # day_six/part_two.cpp
-  day_six/test.cpp
+  # day_six/test.cpp
+  # day_seven/part_one.cpp
+  day_seven/part_two.cpp
+  # day_seven/test.cpp
   # main.cpp
 )
 
